# degit-riptide

./: .gitignore  README.md
client/: app.ts  main.ts  package-lock.json  package.json  tsconfig.json
client/src/: log.ts  utils.ts
drawio/: flowchart
electron/: package-lock.json  package.json  tsconfig.json
electron/app/: config.ts  index.ts  main.ts  preload.ts
electron/app/client/: package-lock.json  package.json
electron/app/client/public/: index.html
electron/app/client/src/: App.module.scss  App.tsx  index.scss  index.tsx  reportWebVitals.ts
electron/app/client/src/components/: Menu.module.scss  Menu.tsx  PageNotFound.tsx  PageRoute.tsx
electron/app/client/src/components/Explore/: Explore.module.scss  Explore.tsx
electron/app/client/src/components/Guide/: Guide.tsx
electron/app/client/src/components/Profile/: Profile.module.scss  Profile.tsx
electron/app/client/src/components/Repositories/: Blob.module.scss  Blob.tsx  Issues.tsx  NewRepo.module.scss  NewRepo.tsx  Proposals.tsx  (+7 more)
electron/app/client/src/config/: Config.ts
electron/app/client/src/contexts/: Helper.context.ts  auth.ts
electron/app/client/src/functions/: time.ts
electron/app/server/: start_server.ts  utils.ts
electron/app/server/controllers/: db.controller.ts  info.controller.ts  meta.controller.ts  noninfo.controller.ts  solana.controller.ts
electron/app/server/routes/: db.route.ts  info.route.ts  meta.route.ts  noninfo.route.ts  solana.route.ts
server/: main.ts  package-lock.json  package.json  server.ts  solana-test.ts  utils.ts
server/controllers/: info.controller.ts  noninfo.controller.ts
server/middleware/: auth.middleware.ts  solana.middleware.ts
server/routes/: noninfo.route.ts
server/src/: git.ts  http-duplex.ts  log.ts  service.ts  solana.ts  util.ts
solana/: Cargo.toml  build.sh  deploy.sh
solana/dao/: Cargo.toml
solana/dao/src/: lib.rs
solana/invest/: Cargo.toml
solana/invest/src/: lib.rs
solana/mint-token/: main.ts  package-lock.json  package.json  tsconfig.json
solana/reward/: Cargo.toml
solana/reward/src/: lib.rs
solana/src/: lib.rs
(+4 files in other folders)
