[package]
name = "degit-dao"
version = "0.1.0"
edition = "2021"
description = "Degit: DAO program"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.9"

[dev-dependencies]
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"

[lib]
name = "dao"
crate-type = ["cdylib", "lib"]