[package]
name = "degit-reward"
version = "0.1.0"
edition = "2021"
description = "Degit Reward Program"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
solana-program = "=1.10.0"
spl-token = "3.3.0"
spl-token-metadata = "0.0.1"

[dev-dependencies]
solana-program-test = "=1.10.0"
solana-sdk = "=1.10.0"

[lib]
name = "reward"
crate-type = ["cdylib", "lib"]